--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -293,7 +293,7 @@
               <h3>В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой версией.</h3>
             </div>
             <div class="clause">
-                <h3>Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу https://laviero.ru/privacy-policy/</h3>
+                <h3>Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу https://laviero.ru/privacy-policy</h3>
             </div>
           </section>
 
