--- a/сollaboration.html
+++ b/сollaboration.html
@@ -106,16 +106,16 @@
             <!-- Социальные сети -->
             <div class="social-links">
               <a href="https://vk.com/laviero" class="social-link vk" target="_blank" rel="noopener noreferrer">
-                <img src="img/vk-w.png" alt="VK">
+                <img src="img/vk-b.png" alt="VK">
               </a>
               <a href="https://wa.me/79652530871" class="social-link whatsapp" target="_blank" rel="noopener noreferrer">
-                <img src="img/w-w.png" alt="WhatsApp">
+                <img src="img/w-b.png" alt="WhatsApp">
               </a>
               <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
-                <img src="img/t-w.png" alt="Telegram">
+                <img src="img/t-b.png" alt="Telegram">
               </a>
               <a href="tel:+79660924947" class="social-link tel">
-                <img src="img/tel-w.png" alt="Позвонить">
+                <img src="img/tel-b.png" alt="Позвонить">
               </a>
             </div>
         </div>
@@ -124,7 +124,7 @@
         <div class="footer-bottom">
             <div class="footer-legal">
                 <a href="privacy-policy.html" class="privacy-link">Политика конфиденциальности</a>
-                <span class="copyright">&copy; 2024 Laviero. Все права защищены</span>
+                <span class="copyright">&copy; 2024 Laviero. Все права защищены<br>Обращаем Ваше внимание на то, что данный сайт носит информационно-справочный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 (2) Гражданского кодекса Российской Федерации. За информацией об актуальных предложениях, ценах, комплектациях, технических характеристиках товаров и услуг обращайтесь по эл. почте: info@laviero.ru.</span>
             </div>
         </div>
     </div>
