--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Laviero — Мебель</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="preload" as="style" href="styles.css" onload="this.rel='stylesheet'">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap">
 </head>
 <body>
   <!-- Шапка -->
