--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container header-container">
         <div class="logo">
-            <a href="index.html">
+            <a href="./">
               <img src="img/logo.png" alt="Laviero" class="logo-img" />
             </a>
         </div>
@@ -194,7 +194,7 @@
         <div class="footer-top">
             <!-- Логотип -->
             <div class="footer-logo">
-                <a href="index.html">
+                <a href="./">
                     <img src="img/logo_white.png" alt="Laviero" class="logo-img">
                 </a>
             </div>
