--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,8 +19,8 @@
       
       <nav class="nav" id="nav-menu">
         <a href="about.html">О нас</a>
-        <a href="index.html?scrollTo=portfolio">Портфолио</a>
-        <a href="index.html?scrollTo=contacts">Контакты</a>
+        <a href="./?scrollTo=portfolio">Портфолио</a>
+        <a href="./?scrollTo=contacts">Контакты</a>
         <a href="сollaboration.html">Сотрудничество</a>
         <!--<a href="#advice">Полезные советы</a>-->
       </nav>
@@ -315,8 +315,8 @@
             <!-- Меню -->
             <nav class="footer-nav">
                 <a href="about.html">О нас</a>
-                <a href="index.html?scrollTo=portfolio">Портфолио</a>
-                <a href="index.html?scrollTo=contacts">Контакты</a>
+                <a href="./?scrollTo=portfolio">Портфолио</a>
+                <a href="./?scrollTo=contacts">Контакты</a>
                 <a href="сollaboration.html">Сотрудничество</a>
                 <!--<a href="#advice">Полезные советы</a>-->
             </nav>
