--- a/project.html
+++ b/project.html
@@ -20,8 +20,8 @@
       
       <nav class="nav" id="nav-menu">
         <a href="about.html">О нас</a>
-        <a href="index.html?scrollTo=portfolio">Портфолио</a>
-        <a href="index.html?scrollTo=contacts">Контакты</a>
+        <a href="./?scrollTo=portfolio">Портфолио</a>
+        <a href="./?scrollTo=contacts">Контакты</a>
         <a href="сollaboration.html">Сотрудничество</a>
        <!--<a href="#advice">Полезные советы</a>-->
       </nav>
@@ -80,8 +80,8 @@
             <!-- Меню -->
             <nav class="footer-nav">
                 <a href="about.html">О нас</a>
-                <a href="index.html?scrollTo=portfolio">Портфолио</a>
-                <a href="index.html?scrollTo=contacts">Контакты</a>
+                <a href="./?scrollTo=portfolio">Портфолио</a>
+                <a href="./?scrollTo=contacts">Контакты</a>
                 <a href="сollaboration.html">Сотрудничество</a>
                 <!-- <a href="#advice">Полезные советы</a>-->
             </nav>
