--- a/project.html
+++ b/project.html
@@ -113,6 +113,8 @@
     </div>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
 
   <script>
