--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <div class="container header-container">
         <div class="logo">
             <a href="./">
-              <img src="img/logo.png" alt="Laviero" class="logo-img" />
+              <img src="img/logo.png" alt="Laviero" width="446" height="174"class="logo-img" />
             </a>
         </div>
       
@@ -28,17 +28,17 @@
       <!-- Добавленные социальные иконки -->
       <div class="header-social">
         <div class="social-links">
-          <a href="https://vk.com/laviero" class="social-link vk" target="_blank" rel="noopener noreferrer">
-            <img src="img/vk-b.png" alt="VK">
+          <a href="https://vk.com/laviero"  class="social-link vk" target="_blank" rel="noopener noreferrer">
+            <img src="img/vk-b.png" alt="VK" width="100" height="100" loading="lazy">
           </a>
           <a href="https://wa.me/79652530871" class="social-link whatsapp" target="_blank" rel="noopener noreferrer">
-            <img src="img/w-b.png" alt="WhatsApp">
+            <img src="img/w-b.png" alt="WhatsApp" width="100" height="100" loading="lazy">
           </a>
           <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
-            <img src="img/t-b.png" alt="Telegram">
+            <img src="img/t-b.png" alt="Telegram" width="100" height="100" loading="lazy">
           </a>
           <a href="tel:+79660924947" class="social-link tel">
-            <img src="img/tel-b.png" alt="Позвонить">
+            <img src="img/tel-b.png" alt="Позвонить" width="100" height="100" loading="lazy">
           </a>
         </div>
       </div>
@@ -59,10 +59,10 @@
       <p>В 2017 году мы начали расширение. С пустого помещения в 1000 м² мы шаг за шагом построили современное производство с ЧПУ, покрасочной камерой и полным циклом.</p>
   
       <div class="photo-block">
-        <img src="img/about/1.webp" alt="Пустое помещение">
-        <img src="img/about/2.webp" alt="Процесс обустройства">
-        <img src="img/about/3.webp" alt="Работающий цех">
-        <img src="img/about/4.webp" alt="Работающий цех">
+        <img src="img/about/1.webp" alt="Пустое помещение" width="1785" height="1336" loading="lazy">
+        <img src="img/about/2.webp" alt="Процесс обустройства" width="1811" height="2419" loading="lazy">
+        <img src="img/about/3.webp" alt="Работающий цех" width="1785" height="1336" loading="lazy">
+        <img src="img/about/4.webp" alt="Работающий цех" width="1785" height="1336" loading="lazy">
       </div>
   
       <p>В 2024 году мы провели ребрендинг и стали <strong>Laviero</strong> — новое имя с уважением к истории.</p>
@@ -71,20 +71,20 @@
       <p>Участие в телепередаче «Квартирный вопрос» на НТВ, изготовление мебели и ставней для одного из выпусков.</p>
   
       <div class="photo-block">
-        <img src="img/about/5.webp" alt="Съёмки">
-        <img src="img/about/6.webp" alt="Монтаж">
-        <img src="img/about/7.webp" alt="Монтаж">
+        <img src="img/about/5.webp" alt="Съёмки" width="1040" height="780" loading="lazy">
+        <img src="img/about/6.webp" alt="Монтаж" width="1040" height="780" loading="lazy">
+        <img src="img/about/7.webp" alt="Монтаж" width="780" height="1040" loading="lazy">
       </div>
   
       <a href="https://www.ntv.ru/video/1643425" class="video-link" target="_blank" rel="noopener noreferrer">
-        <img src="img/icons.png" alt="Иконка видео" class="video-icon" />
+        <img src="img/icons.png" alt="Иконка видео" width="1800" height="2700" loading="lazy" class="video-icon" />
         Посмотреть выпуск на сайте <strong>НТВ →</strong>
       </a>
 
       <div class="photo-block">
-        <img src="img/about/8.webp" alt="Съёмки">
-        <img src="img/about/9.webp" alt="Монтаж">
-        <img src="img/about/10.webp" alt="Монтаж">
+        <img src="img/about/8.webp" alt="Съёмки" width="800" height="539" loading="lazy">
+        <img src="img/about/9.webp" alt="Монтаж" width="800" height="533" loading="lazy">
+        <img src="img/about/10.webp" alt="Монтаж" width="800" height="533" loading="lazy">
       </div>
   
       <p>Сейчас <strong>Laviero</strong> — это команда профессионалов, десятки реализованных проектов и любовь к своему делу. Мы не ставим на поток — мы создаём мебель с душой и опытом, за которым стоит путь.</p>
@@ -100,7 +100,7 @@
             <!-- Логотип -->
             <div class="footer-logo">
                 <a href="./">
-                    <img src="img/logo_white.png" alt="Laviero" class="logo-img">
+                  <img src="img/logo_white.png" alt="Laviero" width="446" height="174" class="logo-img">
                 </a>
             </div>
 
@@ -116,16 +116,16 @@
             <!-- Социальные сети -->
             <div class="social-links">
               <a href="https://vk.com/laviero" class="social-link vk" target="_blank" rel="noopener noreferrer">
-                <img src="img/vk-b.png" alt="VK">
+                <img src="img/vk-b.png" alt="VK" width="100" height="100" loading="lazy">
               </a>
               <a href="https://wa.me/79652530871" class="social-link whatsapp" target="_blank" rel="noopener noreferrer">
-                <img src="img/w-b.png" alt="WhatsApp">
+                <img src="img/w-b.png" alt="WhatsApp" width="100" height="100" loading="lazy">
               </a>
               <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
-                <img src="img/t-b.png" alt="Telegram">
+                <img src="img/t-b.png" alt="Telegram" width="100" height="100" loading="lazy">
               </a>
               <a href="tel:+79660924947" class="social-link tel">
-                <img src="img/tel-b.png" alt="Позвонить">
+                <img src="img/tel-b.png" alt="Позвонить" width="100" height="100" loading="lazy">
               </a>
             </div>
         </div>
@@ -148,6 +148,24 @@
       nav.classList.toggle('active');
     });
   </script>
+
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();
+    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(101158549, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+    });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/101158549" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
 
 </body>
 </html>
