--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container header-container">
         <div class="logo">
             <a href="./">
-              <img src="img/logo.png" alt="Laviero" class="logo-img" />
+              <img src="img/logo.png" alt="Laviero" width="446" height="174"class="logo-img" />
             </a>
         </div>
       
@@ -28,17 +28,17 @@
       <!-- Добавленные социальные иконки -->
       <div class="header-social">
         <div class="social-links">
-          <a href="https://vk.com/laviero" class="social-link vk" target="_blank" rel="noopener noreferrer">
-            <img src="img/vk-b.png" alt="VK">
+          <a href="https://vk.com/laviero"  class="social-link vk" target="_blank" rel="noopener noreferrer">
+            <img src="img/vk-b.png" alt="VK" width="100" height="100" loading="lazy">
           </a>
           <a href="https://wa.me/79652530871" class="social-link whatsapp" target="_blank" rel="noopener noreferrer">
-            <img src="img/w-b.png" alt="WhatsApp">
+            <img src="img/w-b.png" alt="WhatsApp" width="100" height="100" loading="lazy">
           </a>
           <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
-            <img src="img/t-b.png" alt="Telegram">
+            <img src="img/t-b.png" alt="Telegram" width="100" height="100" loading="lazy">
           </a>
           <a href="tel:+79660924947" class="social-link tel">
-            <img src="img/tel-b.png" alt="Позвонить">
+            <img src="img/tel-b.png" alt="Позвонить" width="100" height="100" loading="lazy">
           </a>
         </div>
       </div>
@@ -56,7 +56,7 @@
     
     <!-- Кнопка включения звука с иконкой -->
     <button class="sound-toggle" id="sound-toggle">
-      <img src="img/Volume_off.png" id="sound-icon">
+      <img src="img/Volume_off.png" id="sound-icon" alt="Volume" width="100" height="100" loading="lazy">
     </button>
   </section>
 
@@ -75,28 +75,28 @@
   
     <div class="about-gallery reveal">
         <div class="img-container img-1">
-          <img src="img/Дома.webp" alt="Частные интерьеры" class="img" />
+          <img src="img/Дома.webp" alt="Частные интерьеры" width="1800" height="2700" loading="lazy" class="img" />
           <div class="img-caption reveal">
             <h3>Частные интерьеры</h3>
             <p>Индивидуальные гардеробные, кухни и стеновые панели — там, где каждая деталь создает уют.</p>
           </div>
         </div>
         <div class="img-container img-2">
-          <img src="img/Квартиры.webp" alt="Квартиры в стиле premium" class="img" />
+          <img src="img/Квартиры.webp" alt="Квартиры в стиле premium" width="1600" height="2400" loading="lazy" class="img" />
           <div class="img-caption reveal">
             <h3>Квартиры в стиле premium</h3>
             <p>Шкафы - невидимки, скрытые системы хранения и ниши с подсветкой — функциональность без компромиссов.</p>
           </div>
         </div>
         <div class="img-container img-3">
-          <img src="img/Коммерчиская.webp" alt="Коммерческие проекты" class="img" />
+          <img src="img/Коммерчиская.webp" alt="Коммерческие проекты" width="1600" height="2400" loading="lazy" class="img" />
           <div class="img-caption reveal">
             <h3>Коммерческие проекты</h3>
             <p>Стойки ресепшн, витрины и стеллажи, которые работают на ваш брендинг.</p>
           </div>
         </div>
         <div class="img-container img-4">
-          <img src="img/Офисы.webp" alt="Офисные пространства" class="img" />
+          <img src="img/Офисы.webp" alt="Офисные пространства" width="855" height="1280" loading="lazy" class="img" />
           <div class="img-caption reveal">
             <h3>Офисные пространства</h3>
             <p>Переговорные, зоны лобби и кабинеты — мебель как часть корпоративной идентичности.</p>
@@ -195,7 +195,7 @@
             <!-- Логотип -->
             <div class="footer-logo">
                 <a href="./">
-                    <img src="img/logo_white.png" alt="Laviero" class="logo-img">
+                    <img src="img/logo_white.png" alt="Laviero" width="446" height="174" class="logo-img">
                 </a>
             </div>
 
@@ -211,16 +211,16 @@
             <!-- Социальные сети -->
             <div class="social-links">
               <a href="https://vk.com/laviero" class="social-link vk" target="_blank" rel="noopener noreferrer">
-                <img src="img/vk-b.png" alt="VK">
+                <img src="img/vk-b.png" alt="VK" width="100" height="100" loading="lazy">
               </a>
               <a href="https://wa.me/79652530871" class="social-link whatsapp" target="_blank" rel="noopener noreferrer">
-                <img src="img/w-b.png" alt="WhatsApp">
+                <img src="img/w-b.png" alt="WhatsApp" width="100" height="100" loading="lazy">
               </a>
               <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
-                <img src="img/t-b.png" alt="Telegram">
+                <img src="img/t-b.png" alt="Telegram" width="100" height="100" loading="lazy">
               </a>
               <a href="tel:+79660924947" class="social-link tel">
-                <img src="img/tel-b.png" alt="Позвонить">
+                <img src="img/tel-b.png" alt="Позвонить" width="100" height="100" loading="lazy">
               </a>
             </div>
         </div>
@@ -300,9 +300,13 @@
             const imgWrapper = document.createElement('div');
             imgWrapper.className = 'project-image-wrapper reveal';
   
-            const img = document.createElement('img');
-            img.src = project.images[0];
-            img.alt = project.title;
+            const first = project.images[0];         
+            const img  = document.createElement('img');
+            img.src     = first.src;
+            img.alt     = project.title;
+            img.width   = first.w;                   
+            img.height  = first.h;                    
+            img.loading = 'lazy';
   
             imgWrapper.appendChild(img);
             imgWrapper.appendChild(overlay);
@@ -411,5 +415,23 @@
       io.observe(map);
     })();
     </script>
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i].l=1*new Date();
+      for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+      k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+      ym(101158549, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true,
+          webvisor:true
+      });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/101158549" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
 </body>
 </html>
