--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
     <div class="container header-container">
         <div class="logo">
             <a href="./">
-              <img src="img/logo.png" alt="Laviero" class="logo-img" />
+              <img src="img/logo.png" alt="Laviero" width="446" height="174"class="logo-img" />
             </a>
         </div>
       
@@ -28,17 +28,17 @@
       <!-- Добавленные социальные иконки -->
       <div class="header-social">
         <div class="social-links">
-          <a href="https://vk.com/laviero" class="social-link vk" target="_blank" rel="noopener noreferrer">
-            <img src="img/vk-b.png" alt="VK">
+          <a href="https://vk.com/laviero"  class="social-link vk" target="_blank" rel="noopener noreferrer">
+            <img src="img/vk-b.png" alt="VK" width="100" height="100" loading="lazy">
           </a>
           <a href="https://wa.me/79652530871" class="social-link whatsapp" target="_blank" rel="noopener noreferrer">
-            <img src="img/w-b.png" alt="WhatsApp">
+            <img src="img/w-b.png" alt="WhatsApp" width="100" height="100" loading="lazy">
           </a>
           <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
-            <img src="img/t-b.png" alt="Telegram">
+            <img src="img/t-b.png" alt="Telegram" width="100" height="100" loading="lazy">
           </a>
           <a href="tel:+79660924947" class="social-link tel">
-            <img src="img/tel-b.png" alt="Позвонить">
+            <img src="img/tel-b.png" alt="Позвонить" width="100" height="100" loading="lazy">
           </a>
         </div>
       </div>
@@ -308,7 +308,7 @@
             <!-- Логотип -->
             <div class="footer-logo">
                 <a href="./">
-                    <img src="img/logo_white.png" alt="Laviero" class="logo-img">
+                  <img src="img/logo_white.png" alt="Laviero" width="446" height="174" class="logo-img">
                 </a>
             </div>
 
@@ -324,16 +324,16 @@
             <!-- Социальные сети -->
             <div class="social-links">
               <a href="https://vk.com/laviero" class="social-link vk" target="_blank" rel="noopener noreferrer">
-                <img src="img/vk-b.png" alt="VK">
+                <img src="img/vk-b.png" alt="VK" width="100" height="100" loading="lazy">
               </a>
               <a href="https://wa.me/79652530871" class="social-link whatsapp" target="_blank" rel="noopener noreferrer">
-                <img src="img/w-b.png" alt="WhatsApp">
+                <img src="img/w-b.png" alt="WhatsApp" width="100" height="100" loading="lazy">
               </a>
               <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
-                <img src="img/t-b.png" alt="Telegram">
+                <img src="img/t-b.png" alt="Telegram" width="100" height="100" loading="lazy">
               </a>
               <a href="tel:+79660924947" class="social-link tel">
-                <img src="img/tel-b.png" alt="Позвонить">
+                <img src="img/tel-b.png" alt="Позвонить" width="100" height="100" loading="lazy">
               </a>
             </div>
         </div>
@@ -358,5 +358,22 @@
     });
   </script>
 
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();
+    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(101158549, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+    });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/101158549" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
 </body>
 </html>
