--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="about.html">О нас</a>
         <a href="#portfolio">Портфолио</a>
         <a href="#contacts">Контакты</a>
-        <a href="сollaboration.html">Сотрудничество</a>
+        <a href="collaboration.html">Сотрудничество</a>
        <!--<a href="#advice">Полезные советы</a>-->
       </nav>
 
@@ -204,7 +204,7 @@
                 <a href="about.html">О нас</a>
                 <a href="#portfolio">Портфолио</a>
                 <a href="#contacts">Контакты</a>
-                <a href="сollaboration.html">Сотрудничество</a>
+                <a href="collaboration.html">Сотрудничество</a>
                 <!-- <a href="#advice">Полезные советы</a>-->
             </nav>
 
