--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -21,7 +21,7 @@
         <a href="about.html">О нас</a>
         <a href="./?scrollTo=portfolio">Портфолио</a>
         <a href="./?scrollTo=contacts">Контакты</a>
-        <a href="сollaboration.html">Сотрудничество</a>
+        <a href="collaboration.html">Сотрудничество</a>
         <!--<a href="#advice">Полезные советы</a>-->
       </nav>
 
@@ -317,7 +317,7 @@
                 <a href="about.html">О нас</a>
                 <a href="./?scrollTo=portfolio">Портфолио</a>
                 <a href="./?scrollTo=contacts">Контакты</a>
-                <a href="сollaboration.html">Сотрудничество</a>
+                <a href="collaboration.html">Сотрудничество</a>
                 <!--<a href="#advice">Полезные советы</a>-->
             </nav>
 
