--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
         <a href="about.html">О нас</a>
         <a href="./?scrollTo=portfolio">Портфолио</a>
         <a href="./?scrollTo=contacts">Контакты</a>
-        <a href="сollaboration.html">Сотрудничество</a>
+        <a href="collaboration.html">Сотрудничество</a>
        <!--<a href="#advice">Полезные советы</a>-->
       </nav>
 
@@ -82,7 +82,7 @@
                 <a href="about.html">О нас</a>
                 <a href="./?scrollTo=portfolio">Портфолио</a>
                 <a href="./?scrollTo=contacts">Контакты</a>
-                <a href="сollaboration.html">Сотрудничество</a>
+                <a href="collaboration.html">Сотрудничество</a>
                 <!-- <a href="#advice">Полезные советы</a>-->
             </nav>
 
