--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container header-container">
         <div class="logo">
             <a href="./">
-              <img src="img/logo.png" alt="Laviero" width="446" height="174"class="logo-img" />
+              <img src="img/logo.png" alt="Laviero" width="123" height="48" class="logo-img">
             </a>
         </div>
       
@@ -195,7 +195,7 @@
             <!-- Логотип -->
             <div class="footer-logo">
                 <a href="./">
-                    <img src="img/logo_white.png" alt="Laviero" width="446" height="174" class="logo-img">
+                  <img src="img/logo_white.png" alt="Laviero" width="154" height="60" class="logo-img-2">
                 </a>
             </div>
 
