--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -308,7 +308,7 @@
             <!-- Логотип -->
             <div class="footer-logo">
                 <a href="./">
-                  <img src="img/logo_white.png" alt="Laviero" width="446" height="174" class="logo-img">
+                  <img src="img/logo.png" alt="Laviero" width="123" height="48" class="logo-img">
                 </a>
             </div>
 
