--- a/collaboration.html
+++ b/collaboration.html
@@ -13,7 +13,7 @@
     <div class="container header-container">
         <div class="logo">
             <a href="./">
-              <img src="img/logo.png" alt="Laviero" width="123" height="48" class="logo-img">
+              <img src="img/logo.webp" alt="Laviero" width="123" height="48" class="logo-img">
             </a>
         </div>
       
@@ -29,16 +29,16 @@
       <div class="header-social">
         <div class="social-links">
           <a href="https://vk.com/laviero"  class="social-link vk" target="_blank" rel="noopener noreferrer">
-            <img src="img/vk-b.png" alt="VK" width="100" height="100" loading="lazy">
+            <img src="img/vk-b.webp" alt="VK" width="100" height="100" loading="lazy">
           </a>
           <a href="https://wa.me/79652530871" class="social-link whatsapp" target="_blank" rel="noopener noreferrer">
-            <img src="img/w-b.png" alt="WhatsApp" width="100" height="100" loading="lazy">
+            <img src="img/w-b.webp" alt="WhatsApp" width="100" height="100" loading="lazy">
           </a>
           <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
-            <img src="img/t-b.png" alt="Telegram" width="100" height="100" loading="lazy">
+            <img src="img/t-b.webp" alt="Telegram" width="100" height="100" loading="lazy">
           </a>
           <a href="tel:+79660924947" class="social-link tel">
-            <img src="img/tel-b.png" alt="Позвонить" width="100" height="100" loading="lazy">
+            <img src="img/tel-b.webp" alt="Позвонить" width="100" height="100" loading="lazy">
           </a>
         </div>
       </div>
@@ -89,7 +89,7 @@
             <!-- Логотип -->
             <div class="footer-logo">
                 <a href="./">
-                  <img src="img/logo_white.png" alt="Laviero" width="154" height="60" class="logo-img-2">
+                  <img src="img/logo_white.webp" alt="Laviero" width="154" height="60" class="logo-img-2">
                 </a>
             </div>
 
@@ -105,16 +105,16 @@
             <!-- Социальные сети -->
             <div class="social-links">
               <a href="https://vk.com/laviero" class="social-link vk" target="_blank" rel="noopener noreferrer">
-                <img src="img/vk-b.png" alt="VK" width="100" height="100" loading="lazy">
+                <img src="img/vk-b.webp" alt="VK" width="100" height="100" loading="lazy">
               </a>
               <a href="https://wa.me/79652530871" class="social-link whatsapp" target="_blank" rel="noopener noreferrer">
-                <img src="img/w-b.png" alt="WhatsApp" width="100" height="100" loading="lazy">
+                <img src="img/w-b.webp" alt="WhatsApp" width="100" height="100" loading="lazy">
               </a>
               <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
-                <img src="img/t-b.png" alt="Telegram" width="100" height="100" loading="lazy">
+                <img src="img/t-b.webp" alt="Telegram" width="100" height="100" loading="lazy">
               </a>
               <a href="tel:+79660924947" class="social-link tel">
-                <img src="img/tel-b.png" alt="Позвонить" width="100" height="100" loading="lazy">
+                <img src="img/tel-b.webp" alt="Позвонить" width="100" height="100" loading="lazy">
               </a>
             </div>
         </div>
