--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
                     <a href="tel:+79660924947" class="contact-value">+7 (966) 092-49-47</a>
                 </div>
                 <div class="contact-item-2">
+                  <span class="contact-label"></span>
+                  <a href="tel:+79652530871" class="contact-value">+7 (965) 253-08-71</a>
+              </div>
+                <div class="contact-item-2">
                     <span class="contact-label">E-mail:</span>
                     <a href="mailto:info@laviero.ru" class="contact-value">info@laviero.ru</a>
                 </div>
