--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
     <div class="container header-container">
         <div class="logo">
             <a href="./">
-              <img src="img/logo.webp" alt="Laviero" width="446" height="174"class="logo-img" />
+              <img src="img/logo.webp" alt="Laviero" width="123" height="48" class="logo-img">
             </a>
         </div>
       
@@ -308,7 +308,7 @@
             <!-- Логотип -->
             <div class="footer-logo">
                 <a href="./">
-                  <img src="img/logo.webp" alt="Laviero" width="123" height="48" class="logo-img">
+                  <img src="img/logo_white.webp" alt="Laviero" width="154" height="60" class="logo-img-2">
                 </a>
             </div>
 
