--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laviero — Мебель</title>
+  <title>Laviero — Столярное искусство</title>
+  <meta name="description" content="Laviero — семейное столярное производство корпусной мебели по индивидуальным дизайн-проектам.">
+  <meta name="robots" content="index, follow">
   <link rel="preload" as="style" href="styles.css" onload="this.rel='stylesheet'">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
