--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Laviero — Столярное искусство</title>
   <meta name="description" content="Laviero — семейное столярное производство корпусной мебели по индивидуальным дизайн-проектам.">
   <meta name="robots" content="index, follow">
+  <meta name="yandex-verification" content="664c10cca55a0759" />
   <link rel="preload" as="style" href="styles.css" onload="this.rel='stylesheet'">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
