--- a/collaboration.html
+++ b/collaboration.html
@@ -30,6 +30,12 @@
       <!-- Добавленные социальные иконки -->
       <div class="header-social">
         <div class="social-links">
+          <a href="https://www.behance.net/laviero" class="social-link B" target="_blank" rel="noopener noreferrer">
+            <img src="img/b-b.webp" alt="B" width="100" height="100" loading="lazy">
+          </a>
+          <a href="https://ru.pinterest.com/laviero_mebel/" class="social-link pin" target="_blank" rel="noopener noreferrer">
+            <img src="img/p-b.webp" alt="Pin" width="100" height="100" loading="lazy">
+          </a>
           <a href="https://vk.com/laviero"  class="social-link vk" target="_blank" rel="noopener noreferrer">
             <img src="img/vk-b.webp" alt="VK" width="100" height="100" loading="lazy">
           </a>
@@ -106,6 +112,12 @@
 
             <!-- Социальные сети -->
             <div class="social-links">
+              <a href="https://www.behance.net/laviero" class="social-link B" target="_blank" rel="noopener noreferrer">
+                <img src="img/b-b.webp" alt="B" width="100" height="100" loading="lazy">
+              </a>
+              <a href="https://ru.pinterest.com/laviero_mebel/" class="social-link pin" target="_blank" rel="noopener noreferrer">
+                <img src="img/p-b.webp" alt="Pin" width="100" height="100" loading="lazy">
+              </a>
               <a href="https://vk.com/laviero" class="social-link vk" target="_blank" rel="noopener noreferrer">
                 <img src="img/vk-b.webp" alt="VK" width="100" height="100" loading="lazy">
               </a>
