--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             <h2 class="contacts-title">Контакты</h2>
             <div class="contacts-info">
                 <div class="contact-item-2">
-                  <span class="contact-label"></span>
-                  <a href="tel:+79652530871" class="contact-value">+7 (965) 253-08-71</a>
-              </div>
+                    <span class="contact-label">Телефон:</span>
+                    <a href="tel:+79652530871" class="contact-value">+7 (965) 253-08-71</a>
+                </div>
                 <div class="contact-item-2">
                     <span class="contact-label">E-mail:</span>
                     <a href="mailto:info@laviero.ru" class="contact-value">info@laviero.ru</a>
@@ -227,7 +227,7 @@
               <a href="https://t.me/Laviero_ru" class="social-link telegram" target="_blank" rel="noopener noreferrer">
                 <img src="img/t-b.webp" alt="Telegram" width="100" height="100" loading="lazy">
               </a>
-              <a href="tel:+79652530871" class="social-link tel">
+              <a href="tel:+79660924947" class="social-link tel">
                 <img src="img/tel-b.webp" alt="Позвонить" width="100" height="100" loading="lazy">
               </a>
             </div>
