--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <!-- Блок "Портфолио" -->
   <section class="projects" id="portfolio">
     <div class="container_2">
-      <h2 class="reveal">ПОРТФОЛИО</h2>
+      <h2 class="reveal">РЕАЛИЗОВАННЫЕ ПРОЕКТЫ</h2>
       <div class="projects-grid reveal" id="project-list"></div>
     </div>
   </section>
