--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
       <source src="https://res.cloudinary.com/dhdtcvvos/video/upload/v1744800553/video_yabqdo.mp4" type="video/mp4">
       Ваш браузер не поддерживает видео фон.
     </video>
+
+    <!-- Контейнер с кнопкой и иконками -->
+    <div class="video-overlay-content">
+      <div class="video-left-center">
+        <h1 class="video-title">Мебель по<br>дизайн‑проекту</h1>
+        <p class="video-subtitle">Точные чертежи, премиальные материалы и аккуратная сборка — всё, как вы задумали</p>
+        <a href="https://wa.me/79652530871" target="_blank" class="video-btn">Запросить расчёт</a>
+      </div>
+    
+      <div class="video-icons">
+        <div class="icon-item">
+          <img src="img/factory-icon.webp" alt="Собственное производство" width="40" height="40">
+          <span>Собственное производство</span>
+        </div>
+        <div class="icon-item">
+          <img src="img/quality-icon.webp" alt="Гарантия качества" width="40" height="40">
+          <span>Гарантия качества</span>
+        </div>
+        <div class="icon-item">
+          <img src="img/complexity-icon.webp" alt="Изделие любой сложности" width="40" height="40">
+          <span>Изделие любой сложности</span>
+        </div>
+      </div>
+    </div>
     
     <!-- Кнопка включения звука с иконкой -->
     <button class="sound-toggle" id="sound-toggle">
@@ -112,8 +136,57 @@
   <!-- Блок "Портфолио" -->
   <section class="projects" id="portfolio">
     <div class="container_2">
-      <h2 class="reveal">РЕАЛИЗОВАННЫЕ ПРОЕКТЫ</h2>
+      <h2 class="reveal">ГОТОВЫЕ ПРОЕКТЫ</h2>
       <div class="projects-grid reveal" id="project-list"></div>
+    </div>
+  </section>
+
+
+  <section class="how-we-work-section">
+    <div class="container">
+      <h2 class="how-we-work-title reveal">КАК МЫ РАБОТАЕМ</h2>
+      <div class="how-we-work-grid reveal">
+        <div class="work-step">
+          <span class="step-number">Этап 1</span>
+          <h3>Отправьте нам свой дизайн‑проект</h3>
+          <p>Мы свяжемся с вами, уточним детали и предложим лучшие решения.</p>
+        </div>
+        <div class="work-step">
+          <span class="step-number">Этап 2</span>
+          <h3>Бесплатный расчёт стоимости</h3>
+          <p>Консультируем по материалам, срокам и технологиям. Даём рекомендации.</p>
+        </div>
+        <div class="work-step">
+          <span class="step-number">Этап 3</span>
+          <h3>Выезд конструктора на замер</h3>
+          <p>Для точной фиксации размеров.</p>
+        </div>
+        <div class="work-step">
+          <span class="step-number">Этап 4</span>
+          <h3>Сотрудничество</h3>
+          <p>Заключение договора, согласование сроков, закрепление условий работы.</p>
+        </div>
+        <div class="work-step">
+          <span class="step-number">Этап 5</span>
+          <h3>Утверждение проекта</h3>
+          <p>Разработка изделий, изготовление образцов и финальное согласование.</p>
+        </div>
+        <div class="work-step">
+          <span class="step-number">Этап 6</span>
+          <h3>Производство</h3>
+          <p>Изготовление изделий по утверждённым чертежам и спецификациям.</p>
+        </div>
+        <div class="work-step">
+          <span class="step-number">Этап 7</span>
+          <h3>Доставка и сборка</h3>
+          <p>Точная логистика, бережная доставка и сборка опытной командой.</p>
+        </div>
+        <div class="work-step">
+          <span class="step-number">Этап 8</span>
+          <h3>Контроль качества</h3>
+          <p>Выезд специалиста для приёмки изделий и проверки соответствия проекту.</p>
+        </div>
+      </div>
     </div>
   </section>
 
