--- a/index.html
+++ b/index.html
@@ -145,43 +145,43 @@
   <section class="how-we-work-section">
     <div class="container">
       <h2 class="how-we-work-title reveal">КАК МЫ РАБОТАЕМ</h2>
-      <div class="how-we-work-grid reveal">
+      <div class="how-we-work-grid">
         <div class="work-step">
-          <span class="step-number">Этап 1</span>
+          <span class="step-number reveal">Этап 1</span>
           <h3>Отправьте нам свой дизайн‑проект</h3>
           <p>Мы свяжемся с вами, уточним детали и предложим лучшие решения.</p>
         </div>
-        <div class="work-step">
+        <div class="work-step reveal">
           <span class="step-number">Этап 2</span>
           <h3>Бесплатный расчёт стоимости</h3>
           <p>Консультируем по материалам, срокам и технологиям. Даём рекомендации.</p>
         </div>
-        <div class="work-step">
+        <div class="work-step reveal">
           <span class="step-number">Этап 3</span>
           <h3>Выезд конструктора на замер</h3>
           <p>Для точной фиксации размеров.</p>
         </div>
-        <div class="work-step">
+        <div class="work-step reveal">
           <span class="step-number">Этап 4</span>
           <h3>Сотрудничество</h3>
           <p>Заключение договора, согласование сроков, закрепление условий работы.</p>
         </div>
-        <div class="work-step">
+        <div class="work-step reveal">
           <span class="step-number">Этап 5</span>
           <h3>Утверждение проекта</h3>
           <p>Разработка изделий, изготовление образцов и финальное согласование.</p>
         </div>
-        <div class="work-step">
+        <div class="work-step reveal">
           <span class="step-number">Этап 6</span>
           <h3>Производство</h3>
           <p>Изготовление изделий по утверждённым чертежам и спецификациям.</p>
         </div>
-        <div class="work-step">
+        <div class="work-step reveal">
           <span class="step-number">Этап 7</span>
           <h3>Доставка и сборка</h3>
           <p>Точная логистика, бережная доставка и сборка опытной командой.</p>
         </div>
-        <div class="work-step">
+        <div class="work-step reveal">
           <span class="step-number">Этап 8</span>
           <h3>Контроль качества</h3>
           <p>Выезд специалиста для приёмки изделий и проверки соответствия проекту.</p>
