--- a/project.html
+++ b/project.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laviero — Столярное искусство</title>
-  <meta name="description" content="Laviero — семейное столярное производство корпусной мебели по индивидуальным дизайн-проектам.">
+  <title>Мебель на заказ от семейной столярной мастерской Laviero</title>
+  <meta name="description" content="Кухни, шкафы, столы и другие изделия из шпона, массива и МДФ.">
   <meta name="robots" content="index, follow">
   <link rel="preload" as="style" href="styles.css" onload="this.rel='stylesheet'">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
