--- a/index.html
+++ b/index.html
@@ -142,6 +142,32 @@
   </section>
 
 
+  <!-- Секция ДО / ПОСЛЕ -->
+  <section class="before-after-section">
+    <div class="container">
+      <h2 class="before-after-title reveal">РЕЗУЛЬТАТ</h2>
+
+      <!-- Заголовки сторон -->
+      <div class="ba-headings">
+        <span class="ba-left">ДО</span>
+        <span class="ba-right">ПОСЛЕ</span>
+      </div>
+
+      <!-- Стрелки-навигация -->
+      <button class="ba-arrow ba-prev" aria-label="Предыдущее фото"></button>
+      <button class="ba-arrow ba-next" aria-label="Следующее фото"></button>
+
+      <!-- Контейнер сравнения -->
+      <div class="ba-compare-wrapper">
+        <img class="ba-img ba-img-left"  src="img/before1.webp" alt="3D-визуализация кухни">
+        <img class="ba-img ba-img-right" src="img/after1.webp"  alt="Реализованная кухня">
+        <div class="ba-handle"></div>
+        <input type="range" min="0" max="100" value="50" class="ba-slider" aria-label="Сдвинуть сравнение">
+      </div>
+    </div>
+  </section>
+
+
   <section class="how-we-work-section">
     <div class="container">
       <h2 class="how-we-work-title reveal">КАК МЫ РАБОТАЕМ</h2>
@@ -470,6 +496,53 @@
     window.addEventListener('scroll', checkRevealBlocks);
     window.addEventListener('load', checkRevealBlocks);
   </script>
+
+
+  <script>
+  /* --------- данные пар --------- */
+  const baPairs = [
+    { before: 'img/before1.webp', after:'img/after1.webp',
+      altB:'До', altA:'После' },
+    { before: 'img/before2.webp', after:'img/after2.webp',
+      altB:'До', altA:'После' },
+    { before: 'img/before3.webp', after:'img/after3.webp',
+      altB:'До', altA:'После' },
+    { before: 'img/before4.webp', after:'img/after4.webp',
+      altB:'До', altA:'После' },
+
+  ];
+  
+  (function(){
+    const wrap   = document.querySelector('.ba-compare-wrapper');
+    const left   = wrap.querySelector('.ba-img-left');
+    const right  = wrap.querySelector('.ba-img-right');
+    const slider = wrap.querySelector('.ba-slider');
+    const line   = wrap.querySelector('.ba-handle');
+    const prev   = document.querySelector('.ba-prev');
+    const next   = document.querySelector('.ba-next');
+  
+    let index = 0;
+    function loadPair(i){
+      const p = baPairs[i];
+      left.src  = p.before; left.alt  = p.altB;
+      right.src = p.after;  right.alt = p.altA;
+      slider.value = 20; updateClip();   // reset
+    }
+    function updateClip(){
+      const val = slider.value;
+      right.style.clipPath = `inset(0 0 0 ${val}%)`;
+      line.style.left = `${val}%`;
+    }
+    slider.addEventListener('input', updateClip);
+  
+    prev.addEventListener('click', ()=>{ index = (index-1+baPairs.length)%baPairs.length; loadPair(index); });
+    next.addEventListener('click', ()=>{ index = (index+1)           %baPairs.length; loadPair(index); });
+  
+    loadPair(0); // init
+  })();
+  </script>
+
+
 
 
   <script>
