--- a/index.html
+++ b/index.html
@@ -148,17 +148,17 @@
       <h2 class="before-after-title reveal">РЕЗУЛЬТАТ</h2>
 
       <!-- Заголовки сторон -->
-      <div class="ba-headings">
+      <div class="ba-headings reveal">
         <span class="ba-left">ДО</span>
         <span class="ba-right">ПОСЛЕ</span>
       </div>
 
       <!-- Стрелки-навигация -->
-      <button class="ba-arrow ba-prev" aria-label="Предыдущее фото"></button>
-      <button class="ba-arrow ba-next" aria-label="Следующее фото"></button>
+      <button class="ba-arrow ba-prev reveal" aria-label="Предыдущее фото"></button>
+      <button class="ba-arrow ba-next reveal" aria-label="Следующее фото"></button>
 
       <!-- Контейнер сравнения -->
-      <div class="ba-compare-wrapper">
+      <div class="ba-compare-wrapper reveal">
         <img class="ba-img ba-img-left"  src="img/before1.webp" alt="3D-визуализация кухни">
         <img class="ba-img ba-img-right" src="img/after1.webp"  alt="Реализованная кухня">
         <div class="ba-handle"></div>
