--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="video-left-center">
         <h1 class="video-title">Мебель по<br>дизайн‑проекту</h1>
         <p class="video-subtitle">Точные чертежи, премиальные материалы и аккуратная сборка — всё, как вы задумали</p>
-        <a href="https://wa.me/79652530871" target="_blank" class="video-btn">Запросить расчёт</a>
+        <a href="https://t.me/Laviero_ru" target="_blank" class="video-btn">Запросить расчёт</a>
       </div>
     
       <div class="video-icons">
